# src/controllers/auth.controller.ts
@@ -33,7 +33,22 @@ const registerValidateSchema = Yup.object({
 
   email: Yup.string().email().required(),
 
-  password: Yup.string().required(),
+  password: Yup.string().required().min(6, "Password minimal 6 karakter")
+  .test(
+    'at-least-one-uppercase-letter', 
+    "Contains at least one Uppercase",
+    (value) => {
+    if (!value) return false;
+    const regex = /^(?=.*[A-Z])/;
+    return regex.test(value);
+  }).test(
+    'at-least-one-number', 
+    "Contains at least one nummber",
+    (value) => {
+    if (!value) return false;
+    const regex = /^(?=.*\d)/;
+    return regex.test(value);
+  }),
 
   confirmPassword: Yup.string().required().oneOf([Yup.ref('password'), ""], "Password doesn't match")
 })
@@ -105,6 +120,7 @@ export default {
             username: identifier,
           },
         ],
+        isActive: true,
       });
 
       if(!userByIdentifier) {
@@ -170,6 +186,39 @@ export default {
       data: null,
     })
     }
-  }
+  },
+  async activation(req: Request, res: Response) {
+        /**
+      #swagger.tags = ['Auth']
+      #swagger.requestBody = {
+      required: true,
+      schema: {$ref: '#/components/schemas/ActivationRequest'}
+      }
+     */
+    try {
+      const {code} = req.body as { code: string };
+
+      const user = await UserModel.findOneAndUpdate({
+        activationCode: code,
+      },
+      {
+        isActive: true,
+      },
+      {
+        new: true,
+      },
+    );
+    res.status(200).json({
+      message: "Activation success",
+      data: user,
+    });
+    } catch (error) {
+      const err = error as unknown as Error;
+      res.status(400).json({
+      message: err.message,
+      data: null,
+    });
+    }
+  },
 
 }
